# ai

./: .gitignore  CLAUDE.md  DEVELOP.md  MANUAL.md  README.md  local.properties  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: ci.yml
ai/: build.gradle.kts  proguard-rules.pro
ai/src/main/: AndroidManifest.xml
android/: settings.gradle.kts
android/ai/: proguard-rules.pro
android2/: gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
audit/: 00_summary.md  README.md  bugs_chat.md  bugs_data.md  bugs_reports.md  bugs_settings.md
doc/: README.md  TODO.md  api-formats.md  applog.md  architecture.md  backup-restore.md  cooldowns.md  datastructures.md  development.md  help.md  knowledge.md  local-runtime.md  manual.md  model-test.md  persistent.md  providers.md  report-icons.md  repositories.md  secondary-results.md  share-target.md  throttle.md  translation.md
docs/: 1.html  2.html  index.html
gradle/: libs.versions.toml
iOS/: project.yml
iOS/AI.xcodeproj/: project.pbxproj
iOS/ai/: iOSApp.swift
iOS/ai/Data/: AnalysisChat.swift  (+13 more)
linux/: CMakeLists.txt  main.cpp
linux/data/: AnalysisChat.cpp  AnalysisChat.h  AnalysisModels.cpp  AnalysisModels.h  AnalysisProviders.cpp  AnalysisProviders.h  AnalysisRepository.cpp  AnalysisRepository.h  AnalysisStreaming.cpp  AnalysisStreaming.h  ApiClient.cpp  ApiClient.h  ApiModels.h  ApiTracer.cpp  ApiTracer.h  AppService.cpp  AppService.h  ChatHistoryManager.cpp  ChatHistoryManager.h  DataModels.h  PricingCache.cpp  PricingCache.h  ProviderRegistry.cpp  ProviderRegistry.h  ReportStorage.cpp  ReportStorage.h
linux/helpers/: AppColors.h  ReportExporter.cpp  ReportExporter.h  SettingsExport.cpp  SettingsExport.h  SettingsPreferences.cpp  SettingsPreferences.h  UiFormatting.cpp  UiFormatting.h
linux/qml/: HubView.qml  main.qml
linux/qml/admin/: DeveloperView.qml  HelpView.qml  HousekeepingView.qml  StatisticsView.qml  TraceView.qml
linux/qml/chat/: ChatView.qml  DualChatView.qml
linux/qml/history/: HistoryView.qml  PromptHistoryView.qml
linux/qml/models/: ModelSearchView.qml
linux/qml/reports/: ContentDisplay.qml  NewReportView.qml  ReportParametersView.qml  ReportProgressView.qml  ReportSelectionDialog.qml
linux/qml/settings/: AgentsView.qml  EndpointsView.qml  FlocksView.qml  ParametersView.qml  PromptsView.qml  ServiceSettingsView.qml  SettingsView.qml  SetupView.qml  SwarmsView.qml  SystemPromptsView.qml
linux/qml/theme/: Style.qml
linux/viewmodels/: AppViewModel.cpp  AppViewModel.h  SettingsModels.cpp  SettingsModels.h  UiModels.h
mac/: project.yml
mac/macAI.xcodeproj/: project.pbxproj
macOS/: project.yml
macOS/ai/: macAIApp.swift
windows/: AI.sln
windows/AI/: AI.csproj  App.xaml  App.xaml.cs
(+864 files in other folders)
